--- a/src/OurStory.css
+++ b/src/OurStory.css
@@ -9,7 +9,7 @@
 }
 
 #OurStory_innerContainer {
-  width: 1024px;
+  width: 783px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,4 +25,28 @@
   font-weight: bold;
   font-size: 25px;
   line-height: 35px;
+}
+
+.audreyName {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.1em;
+  margin: 0;
+  font-size: 33px;
+}
+
+.audreyTitle {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  font-size: 22px;
+}
+
+#audreyBox {
+  align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  margin-left: -143px;
 }
