--- a/src/Support.css
+++ b/src/Support.css
@@ -1,4 +1,4 @@
-#Support_container {
+#Support_OuterContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,9 +7,12 @@
   padding: 67px 0px;
 }
 
+#Support_InnerContainer {
+  width: 890px;
+}
+
 .Support_logos {
   display: flex;
-  width: 1024px;
   justify-content: space-between;
   align-items: center;
   margin-top: 60px;
