--- a/src/OurStory.css
+++ b/src/OurStory.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin-left: 319px
+  margin-left: 208px
 }
 
 #textContainer {
@@ -50,5 +50,5 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 45px;
-  margin-right: 99px;
+  margin-left: -99px;
 }
