Begin adding interactivity.

--- a/src/AdvisoryBoard.css
+++ b/src/AdvisoryBoard.css
@@ -1,6 +1,6 @@
 #AdvisoryBoard_OuterContainer {
   padding-top: 80px;
-  padding-top: 80px;
+  padding-bottom: 80px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
