--- a/src/AdvisoryHeads.css
+++ b/src/AdvisoryHeads.css
@@ -1,6 +1,6 @@
 #AdvisoryHeads_Container {
-  padding-top: 80px;
-  padding-top: 80px;
+  padding-top: 67px;
+  padding-bottom: 67px;
   display: flex;
   color: #2b2b2b;
   width: 1024px;
