--- a/src/OurTeam.css
+++ b/src/OurTeam.css
@@ -7,6 +7,13 @@
 }
 
 #OurTeam_Button {
+  width: 222px;
+  height: 53px;
+  background-color: transparent;
+  border: solid 2px #2b2b2b;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.1em;
+  font-weight: bold;
   color: #2b2b2b;
-  border-color: #2b2b2b;
 }
