--- a/src/signup.css
+++ b/src/signup.css
@@ -1,7 +1,35 @@
+.Signup_FormContainer {
+  width: 850px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 58px;
+}
+
+.Signup_Button {
+  width: 222px;
+  height: 53px;
+  background-color: transparent;
+  border: solid 2px #fff;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.1em;
+  font-weight: bold;
+  color: #fff;
+}
+
+.Signup_InputGroup {
+  width: 850px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 58px;
+}
+
 .Signup_Input {
-  display: inline;
   margin: 0;
-  width: 348px;
+  width: 229px;
   color: #fff;
   text-align: center;
   font-size: 16px;
@@ -19,20 +47,6 @@
   color: #fff;
   border-bottom: solid 2px #fff;
 }
-input[type="text"]:focus {
-  outline: none;
-}
-button {
-  display: block;
-  background-color: transparent;
-  border: solid 2px #fff;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  letter-spacing: 0.1em;
-  font-weight: bold;
-  color: #fff;
-  padding: 18px 45px;
-}
 
 .Signup_Input::placeholder {
   color: #fff;
@@ -41,11 +55,4 @@ button {
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.1em;
   font-weight: bold;
-}
-
-.Signup_formContainer {
-  width: 850px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 58px;
 }
