--- a/src/Donate.css
+++ b/src/Donate.css
@@ -1,4 +1,4 @@
-#Donate_OuterContainer {
+#Donate_Container {
   color: #FFF;
   background-image: url('./donate_background.jpg');
   display: flex;
