--- a/src/AdvisoryBoard.css
+++ b/src/AdvisoryBoard.css
@@ -1,4 +1,4 @@
-#AdvisoryBoard_OuterContainer {
+#AdvisoryBoard_Container {
   padding-top: 80px;
   padding-bottom: 80px;
   background-color: #fff;
