--- a/src/AdvisoryHeads.css
+++ b/src/AdvisoryHeads.css
@@ -17,7 +17,7 @@
   margin: 0;
   text-align: center;
   color: rgb(75, 153, 31);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 17.4px;
   font-weight: bold;
   letter-spacing: 0.1em;
@@ -26,7 +26,7 @@
 
 .AdvisoryHeads_Title {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-style: italic;
   font-size: 13.05px;
