--- a/src/OurTeam.css
+++ b/src/OurTeam.css
@@ -12,7 +12,7 @@
   background-color: transparent;
   border: solid 2px #2b2b2b;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: 0.1em;
   font-weight: bold;
   color: #2b2b2b;
