--- a/src/SectionHeader.css
+++ b/src/SectionHeader.css
@@ -1,6 +1,6 @@
 .SectionHeader {
   text-align: center;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-style: italic;
   font-size: 40px;
