--- a/src/AdvisoryBio.css
+++ b/src/AdvisoryBio.css
@@ -12,3 +12,26 @@
 .AdvisoryBio_EmailIcon {
   color: rgb(75, 153, 31);
 }
+
+.AdvisoryBio_Transition-enter {
+  max-height: 0%;
+  opacity: 0.01;
+}
+
+.AdvisoryBio_Transition-enter.AdvisoryBio_Transition-enter-active {
+  max-height: 100%;
+  opacity: 1;
+  transition: all 300ms ease-in;
+}
+
+.AdvisoryBio_Transition-leave {
+  display: inherit;
+  max-height: 100%;
+  opacity: 1;
+}
+
+.AdvisoryBio_Transition-leave.AdvisoryBio_Transition-leave-active {
+  max-height: 0;
+  opacity: 0.01;
+  transition: all 300ms ease-in;
+}
