--- a/src/AdvisoryBio.css
+++ b/src/AdvisoryBio.css
@@ -14,14 +14,14 @@
 }
 
 .AdvisoryBio_Transition-enter {
-  max-height: 0%;
+  max-height: 0;
   opacity: 0.01;
 }
 
 .AdvisoryBio_Transition-enter.AdvisoryBio_Transition-enter-active {
   max-height: 100%;
   opacity: 1;
-  transition: all 300ms ease-in;
+  transition: all 300ms ease-in 300ms;
 }
 
 .AdvisoryBio_Transition-leave {
