--- a/src/signup.css
+++ b/src/signup.css
@@ -1,58 +1,63 @@
-.Signup_FormContainer {
-  width: 850px;
+@media(max-width: 1024px) {
+  #Signup_Container {
+    display: flex;
+    padding: 0px 32px;
+    height: 100vh;
+    overflow: hidden;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
+    align-items: center;
+  }
+
+  #Signup_Header {
+    font-size: 26px;
+    margin: 0px;
+    margin-bottom: 32px;
+  }
+
+  #Signup_Subheader {
+    font-size: 18px;
+    margin-bottom: 32px;
+  }
+}
+
+@media(min-width: 1024px) {
+  #Signup_Header {
+    font-size: 40px;
+  }
+
+  #Signup_Container {
+    justify-content: center;
+    padding: 67px;
+  }
+
+  #Signup_Subheader {
+    font-size: 15px;
+    margin-bottom: 67px;
+  }
+}
+
+#Signup_Container {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 58px;
+  background-color: #4B991F;
 }
 
-.Signup_Button {
-  width: 222px;
-  height: 53px;
-  background-color: transparent;
-  border: solid 2px #fff;
-  font-size: 16px;
+#Signup_Header {
+  color: #fff;
   font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.1em;
   font-weight: bold;
-  color: #fff;
-}
-
-.Signup_InputGroup {
-  width: 850px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 58px;
-}
-
-.Signup_Input {
-  margin: 0;
-  width: 229px;
-  color: #fff;
+  letter-spacing: .13em;
   text-align: center;
-  font-size: 16px;
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.1em;
-  font-weight: bold;
-  appearance: none;
-  box-shadow: none;
-  border-radius: none;
-  padding: 10px;
-  border: none;
-  border-bottom: solid 2px #c9c9c9;
-  transition: border 0.3s;
-  background-color: transparent;
-  color: #fff;
-  border-bottom: solid 2px #fff;
 }
 
-.Signup_Input::placeholder {
+#Signup_Subheader {
+  max-width: 716px;
   color: #fff;
+  font-family: Roboto;
   text-align: center;
-  font-size: 16px;
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.1em;
   font-weight: bold;
+  letter-spacing: 0.1em;
 }
