Make WhatWereAskingFor mobile friendly.

--- a/src/BodyText.css
+++ b/src/BodyText.css
@@ -1,9 +1,25 @@
+@media(min-width: 1024px) {
+  .BodyText {
+    font-size: 20px;
+    line-height: 35px;
+    max-width: 1024px;
+  }
+
+  .AlignLeft {
+    text-align: left;
+  }
+}
+
+@media(max-width: 1024px) {
+  .BodyText {
+    font-size: 18px;
+    line-height: 28px;
+  }
+}
+
 .BodyText {
   text-align: center;
   font-family: "Open Sans", sans-serif;
-  font-size: 20px;
-  line-height: 35px;
-  max-width: 1024px;
 }
 
 .AlignLeft {
