--- a/src/what_were_asking_for.css
+++ b/src/what_were_asking_for.css
@@ -1,24 +1,53 @@
-#outerContainer {
-  display: flex;
-  justify-content: center;
-  color: #2b2b2b;
+@media(min-width: 1024px) {
+  #WhatWereAskingFor_Container {
+    display: flex;
+    justify-content: center;
+    color: #2b2b2b;
+  }
+
+  #WhatWereAskingFor_InnerContainer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    display: flex;
+    justify-content: flex-end;
+    width: 1024px;
+    background-image: url('./food_bowl.jpg');
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: 436px 381px;
+  }
+
+  #WhatWereAskingFor_TextContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 598px;
+  }
 }
 
-#innerContainer {
-  padding-top: 100px;
-  padding-bottom: 100px;
-  display: flex;
-  justify-content: flex-end;
-  width: 1024px;
-  background-image: url('./food_bowl.jpg');
-  background-position: top left;
-  background-repeat: no-repeat;
-  background-size: 436px 381px;
-}
+@media(max-width: 1024px) {
+  #WhatWereAskingFor_Container {
+    display: flex;
+    justify-content: center;
+    color: #2b2b2b;
+  }
 
-#textContainer {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 598px;
+  #WhatWereAskingFor_InnerContainer {
+    flex-direction: column;
+    display: flex;
+    justify-content: flex-end;
+    background-image: url('./food_bowl.jpg');
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: 436px 381px;
+    padding-top: 436px;
+  }
+
+  #WhatWereAskingFor_TextContainer {
+    padding: 32px;
+    padding-top: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
 }
