--- a/src/Support.css
+++ b/src/Support.css
@@ -1,19 +1,49 @@
-#Support_OuterContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #2b2b2b;
-  color: #fff;
-  padding: 67px 0px;
+@media(min-width: 1024px) {
+  #Support_OuterContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #2b2b2b;
+    color: #fff;
+    padding: 67px 0px;
+  }
+
+  #Support_InnerContainer {
+    width: 890px;
+  }
+
+  .Support_logos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 60px;
+  }
 }
 
-#Support_InnerContainer {
-  width: 890px;
-}
+@media(max-width: 1024px) {
+  #Support_OuterContainer {
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #2b2b2b;
+    color: #fff;
+  }
 
-.Support_logos {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 60px;
+  #Support_InnerContainer {
+    padding: 16px;
+  }
+
+  .Support_logos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .Support_logos img {
+    height: 40px;
+    margin: 8px;
+  }
 }
