--- a/src/OurStoryDropdown.css
+++ b/src/OurStoryDropdown.css
@@ -1,13 +1,26 @@
-#OuterContainer {
-  padding-top: 80px;
-  padding-bottom: 80px;
-  background-color: rgba(75, 153, 31, 0.1);
-  display: flex;
-  flex-direction: column;
-  color: #2b2b2b;
-  align-items: center;
+@media(min-width: 1024px) {
+  #OuterContainer {
+    padding-top: 80px;
+    padding-bottom: 80px;
+    background-color: rgba(75, 153, 31, 0.1);
+    display: flex;
+    flex-direction: column;
+    color: #2b2b2b;
+    align-items: center;
+  }
+
+  #InnerContainer {
+    width: 890px;
+  }
 }
 
-#InnerContainer {
-  width: 890px;
+@media(max-width: 1024px) {
+  #OuterContainer {
+    padding: 16px;
+    background-color: rgba(75, 153, 31, 0.1);
+    display: flex;
+    flex-direction: column;
+    color: #2b2b2b;
+    align-items: center;
+  }
 }
