--- a/src/Intro.css
+++ b/src/Intro.css
@@ -21,8 +21,7 @@
 @media(max-width: 1024px) {
   #Intro_Container {
     display: flex;
-    padding: 16px;
-    height: 100vh;
+    padding: 32px 16px;
     overflow: hidden;
     flex-direction: column;
     justify-content: center;
@@ -37,7 +36,7 @@
 
   #Intro_Subheader {
     line-height: 22px;
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 
