--- a/src/SignupForm.css
+++ b/src/SignupForm.css
@@ -119,3 +119,12 @@
     font-weight: bold;
   }
 }
+
+input:focus {
+  outline: none;
+}
+
+input:focus::-webkit-input-placeholder { color:transparent; }
+input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
+input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
+input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
