--- a/src/what_were_asking_for.css
+++ b/src/what_were_asking_for.css
@@ -6,8 +6,7 @@
   }
 
   #WhatWereAskingFor_InnerContainer {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 110px 0px;
     display: flex;
     justify-content: flex-end;
     width: 1024px;
@@ -19,9 +18,12 @@
 
   #WhatWereAskingFor_TextContainer {
     display: flex;
-    align-items: center;
     flex-direction: column;
     width: 598px;
+  }
+
+  #WhatWereAskingFor_TextContainer p {
+    text-align: center;
   }
 }
 
