--- a/src/AdvisoryBio.css
+++ b/src/AdvisoryBio.css
@@ -21,11 +21,10 @@
 .AdvisoryBio_Transition-enter.AdvisoryBio_Transition-enter-active {
   max-height: 100%;
   opacity: 1;
-  transition: all 300ms ease-in 300ms;
+  transition: all 500ms ease-in;
 }
 
 .AdvisoryBio_Transition-leave {
-  display: inherit;
   max-height: 100%;
   opacity: 1;
 }
