--- a/src/AdvisoryHeads.css
+++ b/src/AdvisoryHeads.css
@@ -4,6 +4,8 @@
 }
 
 .AdvisoryHeads_Container {
+  width: 1024px;
+  justify-content: space-between;
   display: flex;
   color: #2b2b2b;
 }
@@ -12,7 +14,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex: 1;
   margin: 16px;
+  width: 220px;
 }
 
 .AdvisoryHeads_Name {
