--- a/src/Intro.css
+++ b/src/Intro.css
@@ -21,8 +21,7 @@
 @media(max-width: 1024px) {
   #Intro_Container {
     display: flex;
-    padding: 32px 16px;
-    overflow: hidden;
+    padding: 64px;
     flex-direction: column;
     justify-content: center;
     flex: 1;
