--- a/src/OurStory.css
+++ b/src/OurStory.css
@@ -51,7 +51,6 @@
 
 @media(max-width: 1024px) {
   #OurStory_outerContainer {
-    height: 100vh;
     background-image: url("./our_story_background_mobile.png");
     background-size: cover;
     background-position: top center;
@@ -59,10 +58,11 @@
     display: flex;
     justify-content: center;
     color: #fff;
+    padding: 64px;
+    min-height: 50vh;
   }
 
   #OurStory_innerContainer {
-    padding: 32px 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
