--- a/src/Hero.css
+++ b/src/Hero.css
@@ -10,11 +10,12 @@
   justify-content: flex-start;
 }
 
+
 @media(max-width: 1024px) {
   #SuperContainer {
     display: flex;
     flex-direction: column;
-    height: 70vh;
+    min-height: 100vh;
   }
 
   #Hero_Container {
@@ -36,6 +37,12 @@
     padding: 16px;
     text-align: center;
     font-size: 16px;
+  }
+}
+
+@media(max-height: 414px) {
+  #Hero_Container {
+    background-position: center top -50px;
   }
 }
 
