--- a/src/DonationBox.css
+++ b/src/DonationBox.css
@@ -4,16 +4,32 @@
   height: auto;
 }
 
-#Donate_DonationBox {
+#DonateForm_Container {
   display: flex;
   border: solid 3px rgb(75, 153, 31);
   flex-direction: column;
-  background-color: #e0e0e0;
   padding: 39px 47px;
   border-bottom-right-radius: 12px;
   border-bottom-left-radius: 12px;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
+}
+
+#Donate_ButtonGroup {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  margin-top: 20px;
+}
+
+#Donate_Checkbox {
+  text-align: left;
+  margin-bottom: 30px;
+  font-size: 14px;
+}
+
+#NextButton {
+  text-align: center;
 }
 
 .Donate_Button {
@@ -36,28 +52,39 @@
 
 .Donate_Button:hover {
   cursor: pointer;
-  border-color: rgb(75, 153, 31, 0.8);
+  font-weight: 400;
 }
 
-#Donate_ButtonGroup {
-  display: flex;
-  flex-wrap: wrap;
+.Next_Button {
+  background-color: rgb(75, 153, 31);
+  border-radius: 4px;
+  border: solid 2px rgb(75, 153, 31);
+  font-family: "Roboto", sans-serif;
+  width: 100px;
+  line-height: 0px;
+  font-size: 18px;
+  font-weight: 300;
+  color: white;
+  padding-bottom: 16px;
+  padding-top: 16px;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-bottom: 32px;
   text-align: center;
-  margin-top: 20px;
 }
 
- #Donate_Currency {
-   width: 60px;
-   height: 90px;
-   background-color: #fff;
-   color: #2b2b2b;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   font-size: 45px;
-   font-family: "Open Sans", sans-serif;
-   font-weight: bold;
- }
+.Next_Button:hover {
+  cursor: pointer;
+  background-color: rgb(75, 153, 31, 0.9);
+  border-color: rgb(75, 153, 31, 0.9);
+}
+
+input[type=checkbox] {
+
+}
+
+
+
 
  #Donate_Input {
    background-color: #fff;
