--- a/src/donationcomponents/ProgressBar.css
+++ b/src/donationcomponents/ProgressBar.css
@@ -28,12 +28,11 @@
   justify-content: center;
   align-items: center;
   z-index: 0;
-
 }
 
 #line {
   background-color: white;
-  width: 450px;
+  width: 60%;
   height: 3px;
   margin: -80px auto;
   z-index: 0;
