--- a/src/donationcomponents/ProgressCircle.css
+++ b/src/donationcomponents/ProgressCircle.css
@@ -1,22 +1,25 @@
-#circles {
+.circle {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: white;
   border-radius: 100%;
   width: 50px;
   height: 50px;
   box-shadow: inset 0px 1px 10px #2a4d16;
   font-size: 1.5em;
-  color: rgb(75, 153, 31);
   border-radius: 100%;
   width: 50px;
   height: 50px;
   z-index: 1
 }
 
-#active {
+.inactive {
+  background-color: white;
+  color: rgb(75, 153, 31);
+}
+
+.active {
   border: solid 3px white;
   color: white;
   background-color: rgb(75, 153, 31);
