Add citations to support
Added super script citations with links. Css for a tags is in
Support.css. White goes to a light grey on visited.

--- a/src/Support.css
+++ b/src/Support.css
@@ -1,3 +1,12 @@
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #bababa;
+}
+
 @media(min-width: 1024px) {
   #Support_OuterContainer {
     display: flex;
