--- a/src/Intro.css
+++ b/src/Intro.css
@@ -6,7 +6,7 @@
 
 #Intro_Header {
   font-family: 'Open Sans', sans-serif;
-  color: #4B991F;
+  color: #4b991f;
   font-weight: 600;
   text-align: center;
 }
@@ -18,7 +18,7 @@
   font-weight: 400;
 }
 
-@media(max-width: 1024px) {
+@media (max-width: 1024px) {
   #Intro_Container {
     display: flex;
     padding: 32px;
@@ -39,7 +39,7 @@
   }
 }
 
-@media(min-width: 1024px) {
+@media (min-width: 1024px) {
   #Intro_Container {
     justify-content: center;
   }
